# POCSLabComplex

./: .gitignore  CMakeLists.txt  POCSLabComplex.pro  resource.qrc  translations.bat
share/translations/: pocslabcomplex_ru.ts
src/: abstractblock.cpp  abstractblock.h  adderwidget.cpp  adderwidget.h  alb1block.cpp  alb2block.cpp  alb3block.cpp  alb3block.h  inoutwidget.cpp  inoutwidget.h  inputwidget.cpp  inputwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mb1block.cpp  mb2block.cpp  mb2block.h  microcircuitwidget.cpp  microcircuitwidget.h  microprocessorwidget.cpp  microprocessorwidget.h  operations.cpp  operations.h  outputwidget.cpp  outputwidget.h  switchboardwidget.cpp  switchboardwidget.h
src/blocks/: abstractblock.cpp  abstractblock.h  alb1block.cpp  alb1block.h  alb2block.cpp  alb2block.h  alb3block.cpp  alb3block.h  mb1block.cpp  mb1block.h  mb2block.cpp  mb2block.h
src/core/: abstractcomputerunit.cpp  abstractcomputerunit.h  adder.cpp  adder.h  factor.cpp  factor.h  multiplier.cpp  multiplier.h
src/dialogs/: aboutdialog.h  inputdialog.cpp  inputdialog.h  operationdialog.cpp  operationdialog.h  reportdialog.cpp  reportdialog.h  switchboarddialog.cpp  switchboarddialog.h
